// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTileParameters computes the parameters for rendering a curved tile at the expected position 1`] = `
{
  "ground": {
    "angle": 90,
    "cx": -45,
    "cy": 20,
    "radius": 10,
    "start": 0,
    "width": 90,
  },
  "innerBarrier": {
    "angle": 90,
    "chunks": 2,
    "left": -35,
    "radius": 10,
    "shift": 0,
    "top": 20,
    "width": 5,
  },
  "outerBarrier": {
    "angle": 90,
    "chunks": 4,
    "left": 50,
    "radius": 95,
    "shift": 1,
    "top": 20,
    "width": 5,
  },
}
`;

exports[`getTileParameters computes the parameters for rendering a curved tile enlarged at the expected position 1`] = `
{
  "ground": {
    "cx": -45,
    "cy": 20,
    "radius": 10,
    "side": 55,
    "width": 90,
  },
  "horizontalBarrier": {
    "chunks": 2,
    "left": -45,
    "length": 27.5,
    "shift": 0,
    "top": 115,
    "vertical": false,
    "width": 5,
  },
  "innerBarrier": {
    "angle": 90,
    "chunks": 2,
    "left": -35,
    "radius": 10,
    "shift": 0,
    "top": 20,
    "width": 5,
  },
  "outerBarrier": {
    "angle": 90,
    "chunks": 2,
    "left": 50,
    "radius": 40,
    "shift": 1,
    "top": 75,
    "width": 5,
  },
  "verticalBarrier": {
    "chunks": 2,
    "left": 50,
    "length": 27.5,
    "shift": 1,
    "top": 20,
    "vertical": true,
    "width": 5,
  },
}
`;

exports[`getTileParameters computes the parameters for rendering a straight tile at the expected position 1`] = `
{
  "ground": {
    "height": 110,
    "width": 90,
    "x": -35,
    "y": 20,
  },
  "leftBarrier": {
    "chunks": 4,
    "left": -35,
    "length": 27.5,
    "shift": 0,
    "top": 20,
    "vertical": true,
    "width": 5,
  },
  "rightBarrier": {
    "chunks": 4,
    "left": 50,
    "length": 27.5,
    "shift": 1,
    "top": 20,
    "vertical": true,
    "width": 5,
  },
}
`;
